# PPR

./: CMakeLists.txt  consts.h  main.cpp  utils.h
computation/: CalculationScheduler.cpp  CalculationScheduler.h  ParallelCalculationScheduler.cpp  ParallelCalculationScheduler.h
computation/gpu/: OpenCLComponent.cpp  OpenCLComponent.h  opencl_utils.cpp  opencl_utils.h
preprocessing/: ParallelPreprocessor.cpp  ParallelPreprocessor.h  Preprocessor.cpp  Preprocessor.h
